a3 - added row spanning example

--- a/docs/assets/columns.css
+++ b/docs/assets/columns.css
@@ -43,6 +43,14 @@
 .header3 .ag-header-group-cell-with-group {
   background-color: #00e7b1 !important;
 }
+
+/* Used in the row spanning example */
+.cell-span {
+  background-color: #00e5ff;
+}
+
+
+
 /*
 .wrapper {
   display: flex;
