--- a/docs/assets/custom.css
+++ b/docs/assets/custom.css
@@ -3,9 +3,7 @@
 
 blockquote {
     border-left: 4px var(--bs-primary) solid;
-    padding-left: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
     margin-left: 0rem;
