--- a/docs/examples/columns/assets/columns.css
+++ b/docs/examples/columns/assets/columns.css
@@ -58,6 +58,11 @@
 }
 
 
+/* For centered columns example */
+.center-header .ag-header-cell-label {
+   justify-content: center;
+}
+
 
 /*
 .wrapper {
