--- a/docs/assets/columns.css
+++ b/docs/assets/columns.css
@@ -44,6 +44,14 @@
   background-color: #00e7b1 !important;
 }
 
+/* Used in Column Groups page for Group Changes example*/
+.participant-group {
+  background-color: #00e7b1 !important;
+}
+.medals-group {
+  background-color: #5b9bd5 !important;
+}
+
 /* Used in the row spanning example */
 .cell-span {
   background-color: #00e5ff;
