--- a/docs/examples/columns/assets/columns.css
+++ b/docs/examples/columns/assets/columns.css
@@ -44,6 +44,13 @@
   background-color: #00e7b1 !important;
 }
 
+/* Used in Column Groups page for Group Changes example*/
+.participant-group {
+  background-color: #00e7b1 !important;
+}
+.medals-group {
+  background-color: #5b9bd5 !important;
+}
 
 /* For Column Spanning example */
 .header-cell {
