--- a/docs/examples/columns/assets/columns.css
+++ b/docs/examples/columns/assets/columns.css
@@ -1,73 +1,98 @@
 .header1 .ag-header-cell-label {
-  /*Necessary to allow for text to grow vertically*/
-  height: 100%;
-  padding: 0 !important;
+    /*Necessary to allow for text to grow vertically*/
+    height: 100%;
+    padding: 0 !important;
 }
 
 .header1 .ag-header-group-cell {
-  font-size: 50px;
+    font-size: 50px;
 }
 
 .header1 .ag-header-cell-label .ag-header-cell-text {
-  /*Force the width corresponding at how much width
-    we need once the text is laid out vertically*/
-  width: 55px;
-  writing-mode: vertical-lr;
-  -ms-writing-mode: tb-lr;
-  line-height: 2em;
-  margin-top: 60px;
+    /*Force the width corresponding at how much width
+      we need once the text is laid out vertically*/
+    width: 55px;
+    writing-mode: vertical-lr;
+    -ms-writing-mode: tb-lr;
+    line-height: 2em;
+    margin-top: 60px;
 }
 
 /*Floating filters*/
 .header1 .ag-floating-filter-body {
-  height: 50px;
+    height: 50px;
 }
 
 .header1 .ag-floating-filter-body input {
-  height: 49px;
+    height: 49px;
 }
 
 .header1 .ag-floating-filter-button {
-  margin-top: -49px;
+    margin-top: -49px;
 }
 
 .header1 .ag-floating-filter-button button {
-  height: 49px;
+    height: 49px;
 }
 
 .header1 .ag-floating-filter-body input {
-  font-size: 15px;
-  font-weight: bold;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .header3 .ag-header-group-cell-with-group {
-  background-color: #00e7b1 !important;
+    background-color: #00e7b1 !important;
 }
 
 /* Used in Column Groups page for Group Changes example*/
 .participant-group {
-  background-color: #00e7b1 !important;
+    background-color: #00e7b1 !important;
 }
+
 .medals-group {
-  background-color: #5b9bd5 !important;
+    background-color: #5b9bd5 !important;
+}
+
+/* Used in Column Sizing page for Resizing Groups example*/
+.fixed-size-header {
+    background-color: #ffdddd !important;
+}
+
+.resizable-header {
+    background-color: #ddffdd !important;
+}
+
+/* Used in Column Moving page for Suppress Movable & Lock Position example*/
+.locked-col {
+    background: #ddd;
+}
+
+.suppress-movable-col {
+    background: #f5f5dc;
+}
+
+/* Used in Column Pinning page for Column Dragging and Lock Pinned example*/
+.lock-pinned {
+    background: #ddd;
 }
 
 /* For Column Spanning example */
 .header-cell {
-  background-color: #a6e1ec;
-  font-size: 25px;
-  font-weight: bold;
-  text-align: center;
+    background-color: #a6e1ec;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
 }
+
 .quarters-cell {
-  background-color: #5bc0de;
-  font-weight: bold;
+    background-color: #5bc0de;
+    font-weight: bold;
 }
 
 
 /* For centered columns example */
 .center-header .ag-header-cell-label {
-   justify-content: center;
+    justify-content: center;
 }
 
 
